plugin-bazel/src/test/testData/starlark/annotation/UnresolvedSrcsAnnotatorTestData.bzl
java_library(
    name = "myLib",
    my_srcs = [<error descr="File does not exist">"Unresolved.java"</error>],
)
